1. Fix for the sign in arrow and alignment as per GSWV-298 ticket. 2. Fixed Util_nav alignment on the vtk.

--- a/vtk/app/src/main/content/jcr_root/etc/designs/girlscouts-vtk/clientlibs/css/vtk-style.scss
+++ b/vtk/app/src/main/content/jcr_root/etc/designs/girlscouts-vtk/clientlibs/css/vtk-style.scss
@@ -650,6 +650,12 @@
               vertical-align: middle;
             }
           }
+          .accordion-inner {
+            background:none;
+            dt {
+              background:none;
+            }
+          }
         }
       }
     }
@@ -1113,11 +1119,9 @@
         position:relative;
         top: -10px;
         li {
+          float:right;
           &:nth-of-type(2) {
             margin: 0 15.151515%;
-          }
-          &:last-child {
-            float:right;
           }
         }
       }
